<resources>
    <string name="app_name">AmazingCakes</string>
    <string name="description">Every celebration deserves a delicious cake, classic fruit cake, chocolate birthday cake or anything you like the most. So don\'t wait, go to our website and pick your favourite.</string>
    <string name="order">ORDER YOUR AMAZING CAKE here</string>
    <string name="phone">We are open Mon - Fri 9:00am - 5:00 pm. \n You can give us a call or send an email.</string>
    <string name="phonenumber"> 0200-111-222  </string>
    <string name="email"> yourcake@amazingcakes.com </string>
</resources>
