<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_amazing_cakes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9e9e9e"
    tools:context="com.example.android.amazingcakes.AmazingCakes">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/amazingcakes"
        android:text="AmazingCakes.com"
        android:textStyle="italic"
        android:fontFamily="cursive"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        android:background="@android:color/holo_red_light"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="352dp"
        android:id="@+id/cake_image"
        android:src="@drawable/cake"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/amazingcakes" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:text="@string/description"
        android:textStyle="italic"
        android:fontFamily="cursive"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size1"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/cake_image"
        android:layout_marginLeft="@dimen/side_margin1"
        android:layout_marginRight="@dimen/side_margin1"
        android:layout_marginBottom="@dimen/side_margin1"
        android:layout_marginTop="@dimen/side_margin2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:id="@+id/orderbutton"
        android:clickable="false"
        android:background="@android:color/holo_red_light"
        android:layout_alignStart="@id/description"
        android:layout_alignEnd="@id/description"
        android:text="@string/order"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:text="@string/phone"
        android:textStyle="italic"
        android:fontFamily="cursive"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size1"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/orderbutton"
        android:layout_marginLeft="@dimen/side_margin1"
        android:layout_marginRight="@dimen/side_margin1"
        android:layout_marginBottom="@dimen/side_margin2"
        android:layout_marginTop="@dimen/side_margin2"/>

    <ImageView
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:id="@+id/phoneimage"
        android:src="@android:drawable/ic_menu_call"
        android:layout_below="@id/phone"
        android:layout_marginLeft="@dimen/side_margin1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phonenumber"
        android:text="@string/phonenumber"
        android:textStyle="italic"
        android:fontFamily="cursive"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size1"
        android:layout_toRightOf="@id/phoneimage"
        android:layout_below="@id/phone"
        android:layout_marginLeft="@dimen/side_margin2"
        android:paddingTop="13dp"/>

    <ImageView
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:id="@+id/emailimage"
        android:src="@android:drawable/ic_menu_send"
        android:layout_below="@id/phoneimage"
        android:layout_marginLeft="@dimen/side_margin1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:text="@string/email"
        android:textStyle="italic"
        android:fontFamily="cursive"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size1"
        android:layout_toRightOf="@id/emailimage"
        android:layout_below="@id/phonenumber"
        android:layout_marginLeft="@dimen/side_margin2"
        android:layout_marginBottom="@dimen/side_margin1"
        android:paddingTop="13dp"/>

</RelativeLayout>
</ScrollView>